css - foto do chu

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ a {
 }
 
 header#main-header {
-  background-image: linear-gradient(var(--light-black), var(--light-black)), url("../img/woman-studying-coding.jpg");
+  background-image: linear-gradient(var(--light-black), var(--light-black)), url("../img/chu_quality.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
