fix(style): centraliza

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ main section#external-links {
 
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     flex-shrink: 1;
 
     bottom: max(-100px, -50vw);
