--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ main section#external-links div.social a {
 main section#sobre {
     margin-top: 10em;
     margin-bottom: 10em;
-    text-align: justify;
+    text-align: center;
     padding: 20px;
 }
 
@@ -160,7 +160,7 @@ footer {
     background: var(--blue-darker);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 40px;
     padding: 10px;
